Fix an output type then amend swagger.json Instructions for Generating a client from swagger.json
